# cs510r

./: README.md
hw1/calc/: Cargo.toml  README.md
hw1/calc/src/: lib.rs  main.rs
hw2/bob/: Cargo.toml  README.md
hw2/bob/src/: lib.rs
hw2/bob/tests/: bob.rs
hw2/isbn-verifier/: Cargo.toml  README.md
hw2/isbn-verifier/src/: lib.rs
hw2/isbn-verifier/tests/: isbn-verifier.rs
hw2/pythagorean-triplet/: README.md
hw2/pythagorean-triplet/src/: lib.rs
hw2/pythagorean-triplet/tests/: pythagorean-triplet.rs
hw2/raindrops/: README.md
hw2/raindrops/src/: lib.rs
hw2/robot-simulator/src/: lib.rs
hw2/robot-simulator/tests/: robot-simulator.rs
hw3/crypto-square/: README.md
hw3/crypto-square/src/: lib.rs
hw3/protein-translation/src/: lib.rs
hw3/protein-translation/tests/: proteins.rs
hw3/robot-name/: Cargo.toml  README.md
hw3/robot-name/src/: lib.rs
hw3/robot-name/tests/: robot-name.rs  robot-name_steve.rs
hw3/sieve/: Cargo.toml  README.md
hw3/sieve/src/: lib.rs
hw3/sieve/tests/: sieve.rs
hw3/wordy/: Cargo.toml  README.md
hw3/wordy/src/: lib.rs
hw3/wordy/tests/: wordy.rs  wordy_steve.rs
project/auth_server/: Cargo.toml  README.md  file:test.db
project/auth_server/src/: lib.rs  main.rs  models.rs  schema.rs
project/auth_server/tests/: client_hyper_post.rs  test_lib.rs
