[package]
name = "auth_server"
version = "0.1.0"
authors = ["Steve Braich <sbraich@pdx.edu>"]
#workspace = "../"

[dependencies]
actix = "0.7"
actix-web = "0.7"

futures = "0.1"
env_logger = "0.5"
bytes = "0.4"

# For testing
hyper = "0.12.8"
tokio-core = "0.1.17"

#git = "https://github.com/carllerche/curl-rust"
curl = "0.4.14"

#hyper
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"

#hyper web api
pretty_env_logger = "0.2.4"
url = "1.7.1"
hyper-tls = "0.3.0"

diesel = { version = "1.3.0", features = ["sqlite"] }
dotenv = "0.10"

unicase = "2.1.0"